--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,5 +1,7 @@
 NUXT_PUBLIC_API_BASE=http://localhost:8000/api
 NUXT_PUBLIC_SOCKET_URL=http://localhost:8000
+
+
 NUXT_PUBLIC_SUPABASE_URL=https://dcdyjkakthruvfdpyumh.supabase.co
 NUXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_Fr0PfGbdyt3vXubPkp3PDg_sourB6r1
-HOST=http://localhost:3000
+NUXT_PUBLIC_HOST=http://localhost:3000
